--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "PortFolio-2.0",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://pholcomb91.github.io/Portfolio-2.0",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^11.1.0",
@@ -36,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
